move assets to resources